--- a/package.json
+++ b/package.json
@@ -3,13 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@emotion/react": "^11.10.4",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^15.14.9",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^17.0.17",
+    "@types/react-scroll": "^1.8.4",
+    "@types/react-typing-effect": "^2.0.3",
+    "@types/reveal": "^4.2.0",
+    "react": "^18.2.0",
+    "react-awesome-reveal": "^4.1.0",
+    "react-dom": "^18.2.0",
+    "react-particles": "^2.3.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "react-scroll": "^1.8.8",
+    "react-typing-effect": "^2.0.5",
+    "sass": "^1.55.0",
+    "tslib": "^2.4.0",
+    "tsparticles": "^2.3.4",
+    "tsparticles-engine": "^2.3.3",
+    "typescript": "^4.8.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,10 +38,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
